# can1463-q1-simulator

./: .gitignore  CMakeLists.txt  README.md
.kiro/specs/tcan1463-q1-simulator/: design.md  requirements.md  tasks.md
examples/: c_api_basic_example.c  c_api_error_handling_example.c  event_callback_example.cpp  scenario_example.cpp
include/: bus_bias_controller.h  can_transceiver.h  fault_detector.h  inh_controller.h  mode_controller.h  pin_manager.h  power_monitor.h  tcan1463q1_c_api.h  tcan1463q1_scenario.h  tcan1463q1_simulator.h  tcan1463q1_types.h  timing_engine.h  wake_handler.h
src/: bus_bias_controller.cpp  c_api.cpp  can_transceiver.cpp  fault_detector.cpp  inh_controller.cpp  mode_controller.cpp  pin_manager.cpp  power_monitor.cpp  scenario.cpp  simulator.cpp  timing_engine.cpp  wake_handler.cpp
test/: test_bus_bias_controller.cpp  test_c_api.cpp  test_can_transceiver.cpp  test_event_system.cpp  test_fault_detector.cpp  test_inh_controller.cpp  test_main.cpp  test_mode_controller.cpp  test_pin_manager.cpp  test_power_monitor.cpp  test_simulator.cpp  test_timing_engine.cpp  test_wake_handler.cpp
